--- a/load.yaml
+++ b/load.yaml
@@ -9,3 +9,5 @@ console:
   enabled: true # enable console output
 telegraf:
   enabled: false # let's disable telegraf monitoring for the first time
+core:
+  mem_limit: 300
