--- a/load.yaml
+++ b/load.yaml
@@ -10,5 +10,5 @@ console:
 telegraf:
   enabled: false # let's disable telegraf monitoring for the first time
 
-ResourceCheck:
+core:
   mem_limit: 300
